created fun lama facts

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#/home">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#/llama">Game</a></li>
+        <li><a href="#/llama">Llama Saves DTLV</a></li>
         <li><a href="#/aboutme">About Me</a></li>
         
       </ul>
